--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <li>Contects</li>
                     <li>About us</li>
                 </ul>
+                <div class="setting">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <span>
                     <button>Sing up</button>
                     <button>Login</button>
